--- a/WebContent/nav_footer.css
+++ b/WebContent/nav_footer.css
@@ -2,40 +2,26 @@ body {
 	font-family: "Nanum Gothic";
 	height: 100%;
 }
-.navbar{
-    position: relative;
-    height: 60px;
-}
 a{
    	font-weight: bold;
    }
 .anker:hover{
 	color: #000000;
 }
-.nav-li{
-	width: 110px;
+.nav-ul{
+	margin:auto;
 }
-#logos{
-	width: 140px;
+.nav-link{
+	margin:10px 20px;
+	padding:0px;
+	font-family:"Nanum Gothic";
+	font-weight:bold;
+	text-align:right;
 }
 .logo{
-	position: absolute;
-	top: 10%;
-	left: 15%;
+ 	margin-left:15%;
 }
-#navbarNav {
-	max-width: 500px;
-	line-height: 40px;
-	position: relative;
-	top: 30%;
-	left: 55%;
-	text-align: center;
-}
-#toggle{
-	position: absolute;
-	top: 30%;
-	right: 5%;
-}
+
 #footer{
     height: 200px;
     width: 100%;
